--- a/src/app/landing-page/main-page/about-me/about-me.component.html
+++ b/src/app/landing-page/main-page/about-me/about-me.component.html
@@ -4,7 +4,7 @@
 
     <div class="section-text">
       <div class="section-image">
-        <img src="../../../../assets/icon/icon1.png" alt="" />
+        <img src="../../../../assets/icon/icon1.svg" alt="" />
 
         <div class="located">
           <p><span>{{ "ABOUT_ME.I_AM" | translate }}</span> {{ "ABOUT_ME.LOCATION_TEXT" | translate }}</p>
