--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
@@ -9,13 +9,12 @@ section {
   margin: 0 auto;
 }
 .overlay {
-  
-    padding-left: 123px;
-    width: 880px;
-    height: 517px;
-    display: flex;
-    flex-direction: column;
-    padding-right: 20px;
+  padding-left: 123px;
+  width: 880px;
+  height: 517px;
+  display: flex;
+  flex-direction: column;
+  padding-right: 20px;
 }
 .text-section {
   display: flex;
@@ -119,9 +118,98 @@ button {
 }
 
 @media (max-width: 1250px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
+  }
+  section {
+    height: 488px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
+  }
 
+  .overlay {
+    padding-left: 75px;
+    width: 880px;
+    height: 440px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+  }
+  .technologie-section {
+    height: 476px;
+    width: 515px;
+    padding-right: 65px;
+  }
+  .text-section {
+    display: flex;
+    padding-bottom: 32px;
+    width: 630px;
+    height: 132px;
+    img {
+      width: 29px;
+      height: 26px;
+    }
+    p {
+      padding-left: 29px;
+      padding-top: 9px;
+      color: #f8f5ec;
+      font-size: 18px;
+      font-family: "JS Regular";
+      
+    }
+  }
+}
 
+@media (max-width: 1150px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
+  }
+  section {
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
+  }
 
-
-
+  .overlay {
+    padding-left: 75px;
+    width: 530px;
+    height: 541px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+  }
+  .technologie-section {
+    height: 476px;
+    width: 515px;
+    padding-right: 65px;
+  }
+  .text-section {
+    display: flex;
+    padding-bottom: 32px;
+    width: 630px;
+    height: 166px;
+    img {
+      width: 29px;
+      height: 26px;
+    }
+    p {
+      padding-left: 29px;
+      padding-top: 9px;
+      color: #f8f5ec;
+      font-size: 18px;
+      font-family: "JS Regular";
+      width: 462px;
+      
+    }
+  }
 }
