--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
@@ -34,6 +34,40 @@ section {
   }
 }
 
+.overlay-2 {
+  padding-left: 9px;
+  width: 530px;
+  height: 541px;
+  display: flex;
+  flex-direction: column;
+  padding-right: 20px;
+  display: none;
+}
+.technologie-section {
+  height: 541px;
+  width: 474px;
+  padding-right: 31px;
+}
+.text-section {
+  display: flex;
+  padding-bottom: 32px;
+  width: 630px;
+  height: 166px;
+  img {
+    width: 29px;
+    height: 26px;
+  }
+  p {
+    padding-left: 29px;
+    padding-top: 9px;
+    color: #f8f5ec;
+    font-size: 18px;
+    font-family: "JS Regular";
+    width: 462px;
+    
+  }
+}
+
 h3 {
   font-size: 28px;
   font-family: "JS Light";
@@ -171,17 +205,17 @@ button {
     height: 48px;
   }
   section {
-    height: 600px;
+    height: 735px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: start;
     width: 100%;
     max-width: clamp(320px, 100vw, 1440px);
     margin: 0 auto;
   }
 
   .overlay {
-    padding-left: 75px;
+    padding-left: 9px;
     width: 530px;
     height: 541px;
     display: flex;
@@ -189,9 +223,9 @@ button {
     padding-right: 20px;
   }
   .technologie-section {
-    height: 476px;
-    width: 515px;
-    padding-right: 65px;
+    height: 541px;
+    width: 474px;
+    padding-right: 31px;
   }
   .text-section {
     display: flex;
@@ -213,3 +247,69 @@ button {
     }
   }
 }
+
+
+
+@media (max-width: 1000px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
+  }
+  section {
+    height: 1100px;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
+  }
+
+  .overlay {
+    padding-left: 9px;
+    width: 530px;
+    height: 541px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    display: none;
+  }
+  .technologie-section {
+    height: 541px;
+    width: 474px;
+    padding-right: 31px;
+    padding-top: 150px;
+  }
+  .text-section {
+    display: flex;
+    padding-bottom: 32px;
+    width: 630px;
+    height: 166px;
+    img {
+      width: 29px;
+      height: 26px;
+    }
+    p {
+      padding-left: 29px;
+      padding-top: 9px;
+      color: #f8f5ec;
+      font-size: 18px;
+      font-family: "JS Regular";
+      width: 462px;
+    }
+  }
+
+  .overlay-2{
+    display: block;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
