--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -1,10 +1,10 @@
-<app-above-the-fold></app-above-the-fold> 
+<!-- <app-above-the-fold></app-above-the-fold> 
 
 <app-navbar></app-navbar>
 
 <app-about-me></app-about-me>
 
-<app-abilities></app-abilities>
+<app-abilities></app-abilities> -->
 
 <app-my-projects></app-my-projects>
 
