--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
@@ -39,10 +39,25 @@
       </div>
     </div>
   </div>
+  
+  
+<div>
 
-  <div class="technologie-section">
-   
-    
+  <h1 class="title">Join</h1>
+  
+  
+  <p>Technologies</p>
+  <div class="icons-2">
+    @for (icon of icons; track icon){
+      <div class="icon">
+        <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
+      </div>
+    }
+  </div>
+  <span> Duration 3 weeks </span>
+  
+</div>
+<div class="technologie-section">
       <p>Technologies</p>
       <div class="icons">
       @for (icon of icons; track icon){
@@ -54,6 +69,7 @@
     </div>
 
     <img class="project-image" src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
+
 
     <div class="overlay-2">
       <div class="text-section">
