--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
@@ -33,6 +33,9 @@ section {
     font-family: "JS Regular";
   }
 }
+.title{
+  display: none;
+}
 
 .overlay-2 {
   padding-left: 9px;
@@ -116,6 +119,17 @@ h3 {
     transition: transform 0.3s ease-in-out;
   }
 }
+.icons-2{
+  display: flex;
+  
+  padding-bottom: 12px;
+  gap: 32px;
+  .icon-img {
+    width: 32px;
+    height: 36px;
+    transition: transform 0.3s ease-in-out;
+  }
+}
 
 .icon-img {
   width: 32px;
@@ -182,7 +196,7 @@ button {
   .text-section {
     display: flex;
     padding-bottom: 32px;
-    width: 630px;
+    width: 600px;
     height: 132px;
     img {
       width: 29px;
@@ -205,7 +219,7 @@ button {
     height: 48px;
   }
   section {
-    height: 735px;
+    height: 632px;
     display: flex;
     justify-content: center;
     align-items: start;
@@ -217,21 +231,23 @@ button {
   .overlay {
     padding-left: 9px;
     width: 530px;
-    height: 541px;
+    height: 604px;
     display: flex;
     flex-direction: column;
     padding-right: 20px;
+    padding-top: 100px;
   }
   .technologie-section {
     height: 541px;
     width: 474px;
     padding-right: 31px;
+    padding-top: 89px;
   }
   .text-section {
     display: flex;
     padding-bottom: 32px;
     width: 630px;
-    height: 166px;
+    height: 195px;
     img {
       width: 29px;
       height: 26px;
@@ -256,7 +272,7 @@ button {
     height: 48px;
   }
   section {
-    height: 1100px;
+    height: 1210px;
     width: 100%;
     max-width: clamp(320px, 100vw, 1440px);
     margin: 0 auto;
@@ -294,6 +310,9 @@ button {
       font-family: "JS Regular";
       width: 462px;
     }
+  }
+  .title{
+    display: block;
   }
 
   .overlay-2{
