--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
@@ -6,9 +6,10 @@
       <div>
         <h3>About the Project <span> Duration 3 weeks </span></h3>
         <p>
-          This App is a Slack Clone App. <br>
-          It revolutionizes team communication and collaboration with its intuitive interface, real-time messaging,
-          and robust channel organization.
+          This App is a Slack Clone App. <br />
+          It revolutionizes team communication and collaboration with its
+          intuitive interface, real-time messaging, and robust channel
+          organization.
         </p>
       </div>
     </div>
@@ -19,8 +20,8 @@
         <h3>How I have organised my work process</h3>
         <p>
           How do you keep your code clean and maintainable? Have you broken the
-          project down into reusable modules or components?
-          Focus on documentation, naming files, variables, classes and testing.
+          project down into reusable modules or components? Focus on
+          documentation, naming files, variables, classes and testing.
         </p>
       </div>
     </div>
@@ -32,34 +33,17 @@
         <p>
           How many people were in the team and what was your role? Describe your
           tasks in 1-2 sentences, for example: login form, dashboard or chat
-          functionality. <br>
-          hat technologies did you use? <br>
+          functionality. <br />
+          hat technologies did you use? <br />
           It is nice to mention good teamwork and cooperation.
         </p>
       </div>
     </div>
   </div>
-  
-  
-<div>
 
-  <h1 class="title">Join</h1>
-  
-  
-  <p>Technologies</p>
-  <div class="icons-2">
-    @for (icon of icons; track icon){
-      <div class="icon">
-        <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
-      </div>
-    }
-  </div>
-  <span> Duration 3 weeks </span>
-  
-</div>
-<div class="technologie-section">
-      <p>Technologies</p>
-      <div class="icons">
+  <div class="first-section">
+    <p>Technologies</p>
+    <div class="icons">
       @for (icon of icons; track icon){
 
       <div class="icon">
@@ -68,55 +52,85 @@
       }
     </div>
 
-    <img class="project-image" src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
+    <img
+      class="project-image"
+      src="../../../../../assets/icon/Screenshot project.png"
+      alt="Screenshot of Project"
+    />
+    <div class="button">
+      <button>Live Test</button>
+      <button>GitHub</button>
+    </div>
+  </div>
 
+  <!-- Responsive section two -->
+
+  <div class="technologie-section">
+    <div class="secend-section">
+      <h4 class="title">Join</h4>
+      <span> Duration 3 weeks </span>
+
+      <div class="justatest">
+        <p>Technologies:</p>
+        <div class="icons-2">
+          @for (icon of icons; track icon){
+          <div class="icon">
+            <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
+          </div>
+          }
+        </div>
+      </div>
+    </div>
+
+    <img
+      class="project-image"
+      src="../../../../../assets/icon/Screenshot project.png"
+      alt="Screenshot of Project"
+    />
 
     <div class="overlay-2">
       <div class="text-section">
         <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
-  
+
         <div>
           <h3>About the Project <span> Duration 3 weeks </span></h3>
           <p>
-            This App is a Slack Clone App. <br>
-            It revolutionizes team communication and collaboration with its intuitive interface, real-time messaging,
-            and robust channel organization.
+            This App is a Slack Clone App. <br />
+            It revolutionizes team communication and collaboration with its
+            intuitive interface, real-time messaging, and robust channel
+            organization.
           </p>
         </div>
       </div>
-  
+
       <div class="text-section">
         <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
           <h3>How I have organised my work process</h3>
           <p>
-            How do you keep your code clean and maintainable? Have you broken the
-            project down into reusable modules or components?
-            Focus on documentation, naming files, variables, classes and testing.
+            How do you keep your code clean and maintainable? Have you broken
+            the project down into reusable modules or components? Focus on
+            documentation, naming files, variables, classes and testing.
           </p>
         </div>
       </div>
-  
+
       <div class="text-section">
         <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
           <h3>My group work experience</h3>
           <p>
-            How many people were in the team and what was your role? Describe your
-            tasks in 1-2 sentences, for example: login form, dashboard or chat
-            functionality. <br>
-            hat technologies did you use? <br>
+            How many people were in the team and what was your role? Describe
+            your tasks in 1-2 sentences, for example: login form, dashboard or
+            chat functionality. <br />
+            hat technologies did you use? <br />
             It is nice to mention good teamwork and cooperation.
           </p>
         </div>
       </div>
     </div>
 
-
-
-
-
-    <div class="button">
+    <div class="button-two">
       <button>Live Test</button>
       <button>GitHub</button>
     </div>
