--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
@@ -106,7 +106,7 @@
       <div class="text-section">
         <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
-          <h3>How I have organised my work process</h3>
+          <h3>How I Organised My Work Process</h3>
           <p>
             How do you keep your code clean and maintainable? Have you broken
             the project down into reusable modules or components? Focus on
@@ -116,15 +116,18 @@
       </div>
 
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
-          <h3>My group work experience</h3>
+         
+          <div class="title-section">
+            <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+            <h3>My group work experience</h3>
+          </div>
+
           <p>
             How many people were in the team and what was your role? Describe
             your tasks in 1-2 sentences, for example: login form, dashboard or
-            chat functionality. <br />
-            hat technologies did you use? <br />
-            It is nice to mention good teamwork and cooperation.
+            chat functionality. hat technologies did you use? It is nice to
+            mention good teamwork and cooperation.
           </p>
         </div>
       </div>
