--- a/src/app/landing-page/main-page/my-projects/join/join.component.html
+++ b/src/app/landing-page/main-page/my-projects/join/join.component.html
@@ -1,64 +1,146 @@
-<section id="project-3">
-    <div class="overlay">
+<section id="project-1">
+  <div class="overlay">
+    <div class="text-section">
+      <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+
+      <div>
+        <h3>About the Project <span> Duration 3 weeks </span></h3>
+        <p>
+          This App is a Slack Clone App. <br />
+          It revolutionizes team communication and collaboration with its
+          intuitive interface, real-time messaging, and robust channel
+          organization.
+        </p>
+      </div>
+    </div>
+
+    <div class="text-section">
+      <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+      <div>
+        <h3>How I have organised my work process</h3>
+        <p>
+          How do you keep your code clean and maintainable? Have you broken the
+          project down into reusable modules or components? Focus on
+          documentation, naming files, variables, classes and testing.
+        </p>
+      </div>
+    </div>
+
+    <div class="text-section">
+      <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+      <div>
+        <h3>My group work experience</h3>
+        <p>
+          How many people were in the team and what was your role? Describe your
+          tasks in 1-2 sentences, for example: login form, dashboard or chat
+          functionality. <br />
+          hat technologies did you use? <br />
+          It is nice to mention good teamwork and cooperation.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="first-section">
+    <p>Technologies</p>
+    <div class="icons">
+      @for (icon of icons; track icon){
+
+      <div class="icon">
+        <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
+      </div>
+      }
+    </div>
+
+    <img
+      class="project-image"
+      src="../../../../../assets/icon/Screenshot project.png"
+      alt="Screenshot of Project"
+    />
+    <div class="button">
+      <button>Live Test</button>
+      <button>GitHub</button>
+    </div>
+  </div>
+
+  <!-- Responsive section two -->
+
+  <div class="technologie-section">
+    <div class="secend-section">
+      <h4 class="title">Join</h4>
+      <span> Duration 3 weeks </span>
+
+      <div class="justatest">
+        <p>Technologies:</p>
+        <div class="icons-2">
+          @for (icon of icons; track icon){
+          <div class="icon">
+            <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
+          </div>
+          }
+        </div>
+      </div>
+    </div>
+
+    <img
+      class="project-image"
+      src="../../../../../assets/icon/Screenshot project.png"
+      alt="Screenshot of Project"
+    />
+
+    <div class="overlay-2">
+      
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
-  
-        <div>
-          <h3>Join <span> Duration 3 weeks </span></h3>
+      <div>
+
+        <div class="title-section">
+          <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+          <h3>About the Project <span> Duration 3 weeks </span></h3>
+        </div>
           <p>
-            This App is a Slack Clone App. <br>
-            It revolutionizes team communication and collaboration with its intuitive interface, real-time messaging,
-            and robust channel organization.
+            This App is a Slack Clone App. <br />
+            It revolutionizes team communication and collaboration with its
+            intuitive interface, real-time messaging, and robust channel
+            organization.
           </p>
         </div>
       </div>
-  
+
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
-          <h3>How I have organised my work process</h3>
+          <div class="title-section">
+            <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+            <h3>How I Organised My Work Process</h3>
+          </div>
+
           <p>
-            How do you keep your code clean and maintainable? Have you broken the
-            project down into reusable modules or components?
-            Focus on documentation, naming files, variables, classes and testing.
+            How do you keep your code clean and maintainable? Have you broken
+            the project down into reusable modules or components? Focus on
+            documentation, naming files, variables, classes and testing.
           </p>
         </div>
       </div>
+
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
-          <h3>My group work experience</h3>
+          <div class="title-section">
+            <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+            <h3>My group work experience</h3>
+          </div>
+
           <p>
-            How many people were in the team and what was your role? Describe your
-            tasks in 1-2 sentences, for example: login form, dashboard or chat
-            functionality. <br>
-            hat technologies did you use? <br>
-            It is nice to mention good teamwork and cooperation.
+            How many people were in the team and what was your role? Describe
+            your tasks in 1-2 sentences, for example: login form, dashboard or
+            chat functionality. hat technologies did you use? It is nice to
+            mention good teamwork and cooperation.
           </p>
         </div>
       </div>
     </div>
-  
-    <div class="technologie-section">
-     
-      
-        <p>Technologies</p>
-        <div class="icons">
-        @for (icon of icons; track icon){
-  
-        <div class="icon">
-          <img class="icon-img" [src]="icon.src" [alt]="icon.alt" />
-        </div>
-        }
-      </div>
-  
-      <img  class="project-image" src="../../../../../assets/icon/Screenshot project.png" alt="Screenshot of Project" />
-  
-      <div class="button">
-        <button>Live Test</button>
-        <button>GitHub</button>
-      </div>
-      
+
+    <div class="button-two">
+      <button>Live Test</button>
+      <button>GitHub</button>
     </div>
-  </section>
-  
+  </div>
+</section>
