--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.html
@@ -89,11 +89,14 @@
     />
 
     <div class="overlay-2">
+      
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+      <div>
 
-        <div>
+        <div class="title-section">
+          <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
           <h3>About the Project <span> Duration 3 weeks </span></h3>
+        </div>
           <p>
             This App is a Slack Clone App. <br />
             It revolutionizes team communication and collaboration with its
@@ -104,9 +107,12 @@
       </div>
 
       <div class="text-section">
-        <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
         <div>
-          <h3>How I Organised My Work Process</h3>
+          <div class="title-section">
+            <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
+            <h3>How I Organised My Work Process</h3>
+          </div>
+
           <p>
             How do you keep your code clean and maintainable? Have you broken
             the project down into reusable modules or components? Focus on
@@ -117,7 +123,6 @@
 
       <div class="text-section">
         <div>
-         
           <div class="title-section">
             <img src="../../../../../assets/icon/Ellipse 8.png" alt="" />
             <h3>My group work experience</h3>
