--- a/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
+++ b/src/app/landing-page/main-page/my-projects/da-bubble/da-bubble.component.scss
@@ -248,6 +248,14 @@ button {
     max-width: clamp(320px, 100vw, 1440px);
     margin: 0 auto;
   }
+
+  .title-section {
+    display: flex;
+    h3 {
+      color: #89bcd9;
+    }
+  }
+
   .button {
     padding-top: 86px;
   }
@@ -276,7 +284,7 @@ button {
       display: none;
     }
     p {
-      padding-left: 29px;
+      padding-left: 50px;
       padding-top: 9px;
       color: #f8f5ec;
       font-size: 18px;
@@ -319,7 +327,10 @@ button {
 
 @media (max-width: 550px) {
   .secend-section {
-    width: 380px;
+    width: 320px;
+  }
+  section{
+    height: 975px;
   }
 
   .project-image {
@@ -329,29 +340,85 @@ button {
     align-items: center;
   }
 
-    .text-section {
-      width: 474px;
-      height: 120px;
+  .text-section {
+    width: 385px;
+    height: 140px;
 
-      img {
-        width: 20px;
-        height: 20px;
-      }
-
-      h3 {
-        font-size: 20px;
-        padding-left: 5px;
-      }
-
-      p {
-        font-size: 14px;
-        width: 380px;
-      }
-      .title-section{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+    img {
+      width: 20px;
+      height: 20px;
     }
-  
+
+    h3 {
+      font-size: 20px;
+      padding-left: 5px;
+    }
+
+    p {
+      font-size: 14px;
+      width: 310px;
+      padding-left: 56px;
+    }
+    .title-section {
+      display: flex;
+      align-items: center;
+      padding-left: 30px;
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  .secend-section {
+    width: 266px;
+    height: 975px;
+  }
+  section{
+    height: 920px;
+  }
+
+  .project-image {
+    width: 270px;
+  }
+  .technologie-section {
+    align-items: center;
+  }
+
+  .text-section {
+    width: 327px;
+    height: 144px;
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+
+    h3 {
+      font-size: 20px;
+      padding-left: 5px;
+    }
+
+    p {
+      font-size: 14px;
+      width: 298px;
+    }
+    .title-section {
+      display: flex;
+      align-items: center;
+      padding-left: 30px;
+    }
+  }
+
+  .icons-2{
+    .icon-img{
+      width: 22px;
+      height: 22px;
+    }
+  }
+  button{
+    font-size: 14px;
+  }
+
+  .button-two{
+    padding-left: 18px;
+  }
 }
