--- a/src/app/landing-page/main-page/my-projects/join/join.component.scss
+++ b/src/app/landing-page/main-page/my-projects/join/join.component.scss
@@ -1,117 +1,410 @@
 section {
-    background-color: #2d383f;
-    height: 548px;
+  background-color: #2d383f;
+  height: 548px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: clamp(320px, 100vw, 1440px);
+  margin: 0 auto;
+}
+.overlay {
+  padding-left: 100px;
+  width: 880px;
+  height: 490px;
+  display: flex;
+  flex-direction: column;
+}
+.text-section {
+  display: flex;
+  padding-bottom: 32px;
+  width: 690px;
+  height: 114px;
+  img {
+    width: 29px;
+    height: 26px;
+  }
+  p {
+    padding-left: 21px;
+    padding-top: 16px;
+    color: #f8f5ec;
+    font-size: 18px;
+    font-family: "JS Regular";
+  }
+}
+.title {
+  display: none;
+}
+.first-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding-right: 50px;
+  p {
+    color: #f8f5ec;
+    font-size: 18px;
+  }
+}
+
+.overlay-2 {
+  padding-top: 30px;
+  display: none;
+}
+
+.text-section {
+  display: flex;
+  padding-bottom: 32px;
+  width: 630px;
+  height: 166px;
+  img {
+    width: 29px;
+    height: 26px;
+  }
+  p {
+    padding-left: 29px;
+    padding-top: 9px;
+    color: #f8f5ec;
+    font-size: 18px;
+    font-family: "JS Regular";
+    width: 462px;
+  }
+}
+h3 {
+  font-size: 28px;
+  font-family: "JS Light";
+  color: #f8f5ec;
+  padding-left: 21px;
+  span {
+    font-family: "JS Light";
+    font-size: 18px;
+    color: #f8f5ec;
+    padding-left: 15px;
+  }
+}
+h4 {
+  font-family: "JS Regular";
+  font-size: 50px;
+  color: #89bcd9;
+}
+.technologie-section {
+  display: none;
+}
+.project-image {
+  transition: transform 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+.icons {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 12px;
+  gap: 32px;
+  .icon-img {
+    width: 32px;
+    height: 36px;
+    transition: transform 0.3s ease-in-out;
+  }
+}
+
+.icons-2 {
+  display: flex;
+  gap: 15px;
+  padding-left: 5px;
+  .icon-img {
+    width: 32px;
+    height: 36px;
+    transition: transform 0.3s ease-in-out;
+  }
+}
+
+.icon-img {
+  width: 32px;
+  height: 36px;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding-top: 24px;
+}
+.button-two {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  padding-top: 33px;
+}
+
+button {
+  background: transparent;
+  border: 2px solid #6bb1e9;
+  color: #6bb1e9;
+  padding: 10px 20px;
+  font-family: "JS Regular";
+  font-size: 18px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  &:hover {
+    background: #ffffff;
+    color: #1e242b;
+  }
+}
+
+@media (max-width: 1250px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
+  }
+  section {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
   }
+
   .overlay {
-    width: 1199px;
-    height: 517px;
-    padding-left: 123px;
+    padding-left: 75px;
+    width: 880px;
+    height: 456px;
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media (max-width: 1150px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
+  }
+  section {
+    height: 580px;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
+  }
+  .first-section {
+    padding-right: 0;
+    padding-top: 60px;
+  }
+
+  .overlay {
+    padding-left: 9px;
+    width: 530px;
+    height: 604px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+    padding-top: 50px;
+  }
+  .technologie-section {
+    height: 541px;
+    width: 474px;
+    padding-right: 31px;
+    padding-top: 89px;
   }
   .text-section {
     display: flex;
     padding-bottom: 32px;
-    width: 690px;
-    height: 114px;
+    width: 630px;
+    height: 195px;
     img {
       width: 29px;
       height: 26px;
     }
     p {
-      padding-left: 21px;
-      padding-top: 16px;
+      padding-left: 29px;
+      padding-top: 9px;
       color: #f8f5ec;
       font-size: 18px;
       font-family: "JS Regular";
-  
+      width: 462px;
     }
   }
-  
-  h3 {
-    font-size: 28px;
-    font-family: "JS Light";
-    color: #f8f5ec;
-    padding-left: 21px;
-    span {
-      font-family: "JS Light";
-      font-size: 18px;
-      color: #f8f5ec;
-      padding-left: 15px;
-    }
+}
+
+@media (max-width: 1000px) {
+  nav {
+    max-width: clamp(320px, 100vw, 1440px);
+    height: 48px;
   }
-  
-  .technologie-section {
-    height: 517px;
-    width: 453px;
-    padding-right: 117px;
-    p {
-      display: flex;
-      justify-content: center;
-      color: #f8f5ec;
-      font-size: 18px;
-      font-family: "JS Light";
-      padding-bottom: 12px;
-    }
-    img {
-      width: 453px;
-      height: 312px;
+  section {
+    height: 1150px;
+    width: 100%;
+    max-width: clamp(320px, 100vw, 1440px);
+    margin: 0 auto;
+  }
+
+  .title-section {
+    display: flex;
+    h3 {
+      color: #89bcd9;
     }
   }
 
-  .project-image{
-    transition: transform 0.3s ease-in-out;
-    &:hover{
-      transform: scale(1.1);
-    }
-  }
-  
-  .icons {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 12px;
-    gap: 32px;
-    .icon-img {
-      width: 32px;
-      height: 36px;
-      transition: transform 0.3s ease-in-out;
-    }
-  }
-  
-  .icon-img {
-    width: 32px;
-    height: 36px;
-    transition: transform 0.3s ease-in-out;
-  
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
-  
   .button {
+    padding-top: 86px;
+  }
+  .overlay {
+    display: none;
+  }
+  .technologie-section {
+    height: 541px;
+    width: 474px;
+    padding-right: 0px;
+    padding-top: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: normal;
+  }
+  .text-section {
+    display: flex;
+    padding-bottom: 32px;
+    width: 630px;
+    height: 166px;
+    img {
+      width: 29px;
+      height: 26px;
+    }
+    span {
+      display: none;
+    }
+    p {
+      padding-left: 50px;
+      padding-top: 9px;
+      color: #f8f5ec;
+      font-size: 18px;
+      font-family: "JS Regular";
+      width: 454px;
+      text-align: justify;
+    }
+  }
+  .first-section {
+    display: none;
+  }
+
+  .justatest {
+    display: flex;
     align-items: center;
-    gap: 40px;
-    padding-top: 24px;
+    padding-bottom: 0px;
   }
-  
-  button {
-    background: transparent;
-    border: 2px solid #6bb1e9;
-    color: #6bb1e9;
-    padding: 10px 20px;
-    font-family: "JS Regular";
-    font-size: 18px;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-  &:hover{
-    background: #ffffff;
-    color: #1e242b;
+
+  .secend-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 35px;
+    gap: 10px;
+    padding-bottom: 15px;
   }
+  .title {
+    display: block;
   }
-  
+  span {
+    color: #fff;
+  }
+  .overlay-2 {
+    display: block;
+  }
+  .justatest {
+    color: #fff;
+  }
+}
+
+@media (max-width: 550px) {
+  .secend-section {
+    width: 320px;
+  }
+
+  .project-image {
+    width: 324px;
+  }
+  .technologie-section {
+    align-items: center;
+  }
+
+  .text-section {
+    width: 385px;
+    height: 140px;
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+
+    h3 {
+      font-size: 20px;
+      padding-left: 5px;
+    }
+
+    p {
+      font-size: 14px;
+      width: 310px;
+      padding-left: 56px;
+    }
+    .title-section {
+      display: flex;
+      align-items: center;
+      padding-left: 30px;
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  .secend-section {
+    width: 266px;
+  }
+
+  .project-image {
+    width: 270px;
+  }
+  .technologie-section {
+    align-items: center;
+  }
+
+  .text-section {
+    width: 327px;
+    height: 144px;
+
+    img {
+      width: 20px;
+      height: 20px;
+    }
+
+    h3 {
+      font-size: 20px;
+      padding-left: 5px;
+    }
+
+    p {
+      font-size: 14px;
+      width: 298px;
+    }
+    .title-section {
+      display: flex;
+      align-items: center;
+      padding-left: 30px;
+    }
+  }
+
+  .icons-2{
+    .icon-img{
+      width: 22px;
+      height: 22px;
+    }
+  }
+}
