--- a/src/app/landing-page/main-page/my-projects/my-projects.component.scss
+++ b/src/app/landing-page/main-page/my-projects/my-projects.component.scss
@@ -1,76 +1,17 @@
-// nav {
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-//   padding-left: 102px;
-//   border-radius: 10px;
-//   width: 981px;
-//   height: 55px;
-// }
-// section {
-//   scroll-margin-top: 100px;
-// }
-
-// a {
-//   display: flex;
-//   align-items: center;
-//   font-family: "JS Medium";
-//   font-size: 30px;
-//   text-decoration: none;
-//   padding-left: 20px;
-//   padding-right: 25px;
-//   color: #89bcd9;
-//   &:hover {
-//     cursor: pointer;
-//     color: whitesmoke;
-//   }
-// }
-// .active {
-//   background-color: #2d383f;
-//   border-radius: 25px 25px 0 0;
-//   height: 97px;
-//   text-align: center;
-// }
-// h2 {
-//   text-align: center;
-//   font-family: "Anta Regular";
-//   line-height: 120%;
-//   font-size: 60px;
-//   text-shadow: none;
-//   color: #6bb1e9;
-//   padding-top: 103px;
-//   padding-bottom: 80px;
-// }
-
-// @media (max-width: 1250px) {
-
-//   nav{
-//     max-width: clamp(320px, 100vw, 981px);
-//     height: 48px;
-//     padding-left: 96px;
-//   }
-//   #project-1{
-
-//   }
-
-//   }
-
 nav {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 131px;
   border-radius: 10px;
-  width: 1440px;
-  height: 55px;
   max-width: clamp(320px, 100vw, 1440px);
+  margin: 0 auto;
+  width: 100%;
+  height: 32px;
   gap: 10px;
 }
-
 section {
   scroll-margin-top: 100px;
 }
-
 a {
   display: flex;
   align-items: center;
@@ -87,14 +28,12 @@ a:hover {
   cursor: pointer;
   color: whitesmoke;
 }
-
 .active {
   background-color: #2d383f;
-  border-radius: 25px 25px 0 0;
-  height: 97px;
+  border-radius: 10px 10px 0 0;
+  height: 65px;
   text-align: center;
 }
-
 h2 {
   text-align: center;
   font-family: "Anta Regular";
@@ -105,47 +44,32 @@ h2 {
   padding-top: 103px;
   padding-bottom: 80px;
 }
-
 /* === Responsive Styles === */
-
 @media (max-width: 1250px) {
-  nav {
-    width: 100%;
-    max-width: 100%;
-    padding-left: 146px;
-    height: 45px;
-  }
   a {
     font-size: 24px;
     padding-left: 15px;
     padding-right: 15px;
     height: 56px;
   }
-
   .active {
     height: 56px;
   }
-
   h2 {
     font-size: 48px;
     padding-top: 80px;
     padding-bottom: 60px;
   }
 }
-
-@media (max-width: 0px) {
-  nav {
-    padding-left: 219px;
-    height: 44px;
-    gap: 8px;
-  }
+@media (max-width: 1150px) {
   a {
-    font-size: 18px;
+    font-size: 25px;
     padding-left: 10px;
     padding-right: 10px;
   }
   .active {
     height: 56px;
+    justify-content: center;
   }
   h2 {
     font-size: 36px;
@@ -154,22 +78,60 @@ h2 {
   }
 }
 
-@media (max-width: 0px) {
-  nav {
-    padding-left: 16px;
-    height: 40px;
-  }
+@media (max-width: 990px) {
   a {
-    font-size: 16px;
-    padding-left: 8px;
-    padding-right: 8px;
+    font-size: 23px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   .active {
     height: 56px;
+    justify-content: center;
   }
   h2 {
-    font-size: 28px;
-    padding-top: 50px;
-    padding-bottom: 30px;
+    font-size: 36px;
+    padding-top: 60px;
+    padding-bottom: 40px;
   }
+}
+@media (max-width: 550px) {
+
+  a {
+    font-size: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .active {
+    height: 36px;
+    justify-content: center;
+  }
+  h2 {
+    font-size: 36px;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 430px) {
+  nav{
+    height: 20px;
+    gap: 0;
+  }
+  a {
+    font-size: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .active {
+    justify-content: center;
+    border-radius: 10px 10px 0 0;
+    height: 27px;
+  }
+  h2 {
+    font-size: 36px;
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+
+
 }
