--- a/src/app/landing-page/main-page/main-page.component.html
+++ b/src/app/landing-page/main-page/main-page.component.html
@@ -4,11 +4,11 @@
 
 <app-about-me></app-about-me>
 
-<app-abilities></app-abilities> -->
+<app-abilities></app-abilities>
 
 <app-my-projects></app-my-projects>
 
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
 
 <app-feedback></app-feedback>
 
