--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,14 +71,12 @@ html {
 }
 
 body {
-
   background-color: #262e34;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow-x: hidden;
-  max-width: 100vw;
+  width: 100%;
+  min-height: 100vh;
 }
+
 
 h1 {
   font-family: "Anta Regular";
